Responsive:done, overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -200,11 +200,14 @@
   .primary-outline-primary--hover:hover {
     color: #fff;
     background: #007bff; }
-
+html{
+  overflow-x: hidden;
+}
 body {
   line-height: 1.7;
   font-weight: 400;
-  font-size: 1rem; }
+  font-size: 1rem; 
+overflow-x: hidden;}
   body:before {
     position: absolute;
     content: "";
